--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,19 @@
 h1 {
-  color: purple;
-}
+    color: darkred;
+  }
+  
+h2 {
+    font-style: italic;
+    color: red;
+  }
+  
+p {
+    color: crimson;
+  }
+  
+body {
+    background-color: salmon;
+    font-family: sans-serif;
+    text-align: center;
+  }
+
